--- a/infra/deploy/local/docker-compose.yml
+++ b/infra/deploy/local/docker-compose.yml
@@ -1,39 +1,38 @@
 version: '3'
 services:
   auth:
-    image: amstee/easy-cut-auth:prod
+    image: "amstee/easy-cut-auth:${TAG}"
     ports:
     - 8080:8080
   appoitment:
-    image: amstee/easy-cut-appointment:prod
+    image: "amstee/easy-cut-appointment:${TAG}"
     ports:
       -  8085:8080
     links:
       - auth
   barber:
-    image: amstee/easy-cut-barber:prod
+    image: "amstee/easy-cut-barber:${TAG}"
     ports:
       - 8082:8080
     links:
       - auth
   rating:
-    image: amstee/easy-cut-rating:prod
+    image: "amstee/easy-cut-rating:${TAG}"
     ports:
       - 8083:8080
     links:
       - auth
   salon:
-    image: amstee/easy-cut-salon:prod
+    image: "amstee/easy-cut-salon:${TAG}"
     ports:
       - 8084:8080
     links:
       - auth
   user:
-    image: amstee/easy-cut-user:prod
+    image: "amstee/easy-cut-user:${TAG}"
     ports:
       - 8081:8080
     links:
       - auth
-
 
 
