--- a/services/user/Dockerfile
+++ b/services/user/Dockerfile
@@ -1,12 +1,19 @@
 FROM alpine:3.8
 ARG service
-ENV BINARY=$service
+ARG api_id
+ARG api_secret
 
+ENV BINARY=$service
+ENV API_CLIENT_ID=$api_id
+ENV API_CLIENT_SECRET=$api_secret
+
+RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
 RUN adduser -D -g '' appuser
 
 RUN mkdir -p /go/bin/
 
 COPY release/${service} /go/bin/
+COPY config.json /go/bin/
 
 WORKDIR /go/bin/
 
