--- a/infra/deploy/swarm/docker-compose.yml
+++ b/infra/deploy/swarm/docker-compose.yml
@@ -1,38 +1,38 @@
-version: '3'
+version: '3.1'
 networks:
   services:
   proxy:
 services:
   nginx:
     image: nginx:1.15-alpine
-    container_name: "nginx"
     volumes:
-      - "/home/docker/nginx.conf:/etc/nginx/nginx.conf"
+      - "./nginx.conf:/etc/nginx/nginx.conf"
     ports:
       - 80:80
       - 443:443
     deploy:
       placement:
         constraints: [node.role == manager]
-    restart: always
+    depends_on:
+      - auth
+      - user
     networks:
       - services
       - proxy
   auth:
     image: "amstee/easy-cut-auth:${TAG}"
-    container_name: "auth"
-    restart: always
     deploy:
       replicas: 2
     networks:
       - services
   user:
     image: "amstee/easy-cut-user:${TAG}"
-    container_name: "user"
-    restart: always
     deploy:
       replicas: 2
     links:
       - auth
     networks:
       - services
+    environment:
+      API_CLIENT_ID: "${API_CLIENT_ID}"
+      API_CLIENT_SECRET: "${API_CLIENT_SECRET}"
