Added user list route

--- a/services/user/config.json
+++ b/services/user/config.json
@@ -31,6 +31,11 @@
       "match_user": false,
       "route": "/get.*",
       "permissions": ["User"]
+    },
+    {
+      "match_user": false,
+      "route": "/list",
+      "permissions": ["User"]
     }
   ]
 }
