--- a/infra/deploy/local/nginx.conf
+++ b/infra/deploy/local/nginx.conf
@@ -14,6 +14,10 @@ http {
         server user:8080;
     }
 
+    upstream docker-es {
+        server elasticsearch:9200;
+    }
+
     server {
         listen 80;
 
@@ -27,6 +31,15 @@ http {
 
         location /auth/ {
             proxy_pass         http://docker-auth/;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
+        location /es/ {
+            proxy_pass         http://docker-es/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
