--- a/infra/deploy/local/docker-compose.yml
+++ b/infra/deploy/local/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: "nginx"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./cert.crt:/etc/nginx/cert.crt
+      - ./cert.key:/etc/nginx/cert.key
     ports:
       - 80:80
       - 443:443
@@ -23,8 +25,6 @@ services:
       API_CLIENT_SECRET: "${API_CLIENT_SECRET}"
     links:
       - auth
-    volumes:
-      - ./secrets.json:/run/secrets/auth0_api
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
     container_name: "elastic"
