--- a/infra/deploy/swarm/nginx.conf
+++ b/infra/deploy/swarm/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes 1;
 
-events { worker_connections 1024; }
+events { worker_connections 2048; }
 
 http {
 
@@ -20,7 +20,21 @@ http {
     }
 
     server {
+        server_name http-easy-cut;
         listen 80;
+        return 302 https://$host$request_uri;
+    }
+
+    server {
+        server_name https-easy-cut;
+        listen 443 ssl;
+
+        ssl_certificate           /etc/nginx/cert.crt;
+        ssl_certificate_key       /etc/nginx/cert.key;
+        ssl_session_cache  builtin:1000  shared:SSL:10m;
+        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+        ssl_prefer_server_ciphers on;
 
         location /auth {
             return 302 /auth/;
