Fixed update user bug due to empty email

--- a/services/user/config.json
+++ b/services/user/config.json
@@ -1,5 +1,5 @@
 {
-  "port": 8080,
+  "port": 8081,
   "origins": [
     "http://easy-cut.ovh",
     "https://easy-cut.ovh",
@@ -9,7 +9,7 @@
   "api": "api/v2/",
   "tprefix": "auth0|",
   "oauth": "oauth/token",
-  "security": "http://auth:8080",
+  "security": "http://localhost:8080",
   "sfile": "/run/secrets/auth0_api",
   "routes": [
     {
