Initiated barber service development

--- a/services/barber/Dockerfile
+++ b/services/barber/Dockerfile
@@ -1,12 +1,15 @@
 FROM alpine:3.8
 ARG service
+
 ENV BINARY=$service
 
+RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
 RUN adduser -D -g '' appuser
 
 RUN mkdir -p /go/bin/
 
 COPY release/${service} /go/bin/
+COPY config.json /go/bin/
 
 WORKDIR /go/bin/
 
