--- a/infra/deploy/local/nginx.conf
+++ b/infra/deploy/local/nginx.conf
@@ -18,6 +18,10 @@ http {
         server elasticsearch:9200;
     }
 
+    upstream docker-barber {
+        server barber:8080;
+    }
+
     server {
         server_name http-easy-cut;
         listen 80;
@@ -63,6 +67,15 @@ http {
 
         location /user/ {
             proxy_pass         http://docker-user/;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
+        location /barber/ {
+            proxy_pass         http://docker-barber/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
