Finished barber service

--- a/infra/deploy/local/nginx.conf
+++ b/infra/deploy/local/nginx.conf
@@ -25,6 +25,10 @@ http {
     server {
         server_name http-easy-cut;
         listen 80;
+
+        if ($request_method ~ (POST|PUT|DELETE)) {
+            return 307 https://$host$request_uri;
+        }
         return 302 https://$host$request_uri;
     }
 
@@ -45,6 +49,14 @@ http {
 
         location /user {
             return 302 /user/;
+        }
+
+        location /barber {
+            return 302 /barber/;
+        }
+
+        location /es {
+            return 303 /es/;
         }
 
         location /auth/ {
