Salon first routes are functional

--- a/infra/deploy/local/docker-compose.yml
+++ b/infra/deploy/local/docker-compose.yml
@@ -30,6 +30,13 @@ services:
       API_CLIENT_SECRET: "${API_CLIENT_SECRET}"
     links:
       - auth
+  salon:
+    image: "amstee/easy-cut-salon:${TAG}"
+    container_name: "salon"
+    expose:
+    - 8080
+    depends_on:
+    - elasticsearch
   barber:
     image: "amstee/easy-cut-barber:${TAG}"
     container_name: "barber"
