--- a/infra/deploy/local/nginx.conf
+++ b/infra/deploy/local/nginx.conf
@@ -18,6 +18,10 @@ http {
         server elasticsearch:9200;
     }
 
+    upstream docker-salon {
+        server salon:8080;
+    }
+
     upstream docker-barber {
         server barber:8080;
     }
@@ -55,6 +59,10 @@ http {
             return 302 /barber/;
         }
 
+        location /salon {
+            return 302 /salon/;
+        }
+
         location /es {
             return 303 /es/;
         }
@@ -88,6 +96,15 @@ http {
 
         location /barber/ {
             proxy_pass         http://docker-barber/;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
+        location /salon/ {
+            proxy_pass         http://docker-salon/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
