--- a/services/salon/config.json
+++ b/services/salon/config.json
@@ -1,12 +1,21 @@
 {
   "name": "salon",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "port": 8080,
   "origins": [
     "http://easy-cut.ovh",
     "https://easy-cut.ovh",
     "http://localhost"
   ],
+  "oauth": {
+    "use": true,
+    "domain": "https://easy-cut.eu.auth0.com/",
+    "extension": "oauth/token",
+    "audience": "https://easy-cut.eu.auth0.com/api/v2/"
+  },
+  "api": {
+    "use": false
+  },
   "services": [
     {
       "name": "security",
@@ -19,28 +28,36 @@
     {
       "name": "elasticsearch",
       "url": "http://elasticsearch:9200"
+    },
+    {
+      "name": "perms",
+      "url": "http://perms:8080"
     }
   ],
   "routes": [
     {
-      "match_user": false,
       "route": "/status",
       "permissions": []
     },
     {
-      "match_user": false,
       "route": "/create",
       "permissions": ["User"]
     },
     {
-      "match_user": false,
       "route": "/get.*",
       "permissions": ["User"]
     },
     {
-      "match_user": false,
       "route": "/list",
       "permissions": ["User"]
+    },
+    {
+      "route": "/delete.*",
+      "permissions": ["User", "Salon"]
+    },
+    {
+      "route": "/update.*",
+      "permissions": ["User", "Salon"]
     }
   ]
 }
