--- a/infra/deploy/local/nginx.conf
+++ b/infra/deploy/local/nginx.conf
@@ -26,6 +26,10 @@ http {
         server barber:8080;
     }
 
+    upstream docker-perms {
+        server perms:8080;
+    }
+
     server {
         server_name http-easy-cut;
         listen 80;
@@ -111,6 +115,14 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
         }
-    }
 
+        location /perms/ {
+            proxy_pass         http://docker-perms/;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
 }
