--- a/services/perms/config.json
+++ b/services/perms/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "user",
-  "version": "1.1.0",
+  "name": "perms",
+  "version": "1.0.0",
   "port": 8080,
   "origins": [
     "http://easy-cut.ovh",
@@ -11,20 +11,17 @@
     "use": true,
     "domain": "https://easy-cut.eu.auth0.com/",
     "extension": "oauth/token",
-    "audience": "https://easy-cut.eu.auth0.com/api/v2/"
+    "audience": "urn:auth0-authz-api"
   },
   "api": {
     "use": true,
-    "domain": "https://easy-cut.eu.auth0.com/",
-    "extension": "api/v2/",
+    "domain": "https://easy-cut.eu8.webtask.io/adf6e2f2b84784b57522e3b19dfc9201/",
+    "extension": "api/",
     "tprefix": "auth0|"
   },
   "services": [{
     "name": "security",
     "url": "http://auth:8080"
-  }, {
-    "name": "perms",
-    "url": "http://perms:8080"
   }],
   "sfile": "/run/secrets/auth0_api",
   "routes": [
@@ -34,29 +31,12 @@
       "permissions": []
     },
     {
-      "match": false,
-      "route": "/create",
-      "permissions": []
-    },
-    {
-      "match": true,
       "route": "/update.*",
-      "permissions": ["User"]
-    },
-    {
-      "match": false,
-      "route": "/promote.*",
       "permissions": ["Admin"]
     },
     {
-      "match": false,
       "route": "/get.*",
-      "permissions": ["User"]
-    },
-    {
-      "match": false,
-      "route": "/list",
-      "permissions": ["User"]
+      "permissions": []
     }
   ]
 }
