--- a/infra/deploy/local/nginx.conf
+++ b/infra/deploy/local/nginx.conf
@@ -30,6 +30,14 @@ http {
         server perms:8080;
     }
 
+    upstream docker-appointment {
+        server appointment:8080;
+    }
+
+    upstream docker-rating {
+        server rating:8080;
+    }
+
     server {
         server_name http-easy-cut;
         listen 80;
@@ -68,7 +76,19 @@ http {
         }
 
         location /es {
-            return 303 /es/;
+            return 302 /es/;
+        }
+
+        location /appointment {
+            return 302 /appointment/;
+        }
+
+        location /rating {
+            return 302 /rating/;
+        }
+
+        location /perms {
+            return 302 /perms/;
         }
 
         location /auth/ {
@@ -118,6 +138,24 @@ http {
 
         location /perms/ {
             proxy_pass         http://docker-perms/;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
+        location /rating/ {
+            proxy_pass         http://docker-rating/;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
+        location /appointment/ {
+            proxy_pass         http://docker-appointment/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
