--- a/services/appointment/Makefile
+++ b/services/appointment/Makefile
@@ -1,6 +1,6 @@
 os = linux
 TAG ?= latest
-SERVICE := appointment
+SERVICE ?= appointment
 
 guard-%:
 	@ if [ "${${*}}" = "" ]; then \
@@ -15,9 +15,13 @@ release:	guard-SERVICE
 	mkdir -p release
 	CGO_ENABLED=0 GOOS=$(os) GOARCH=amd64 go build -o release/$(SERVICE)
 
+push:	guard-SERVICE
+	docker push amstee/easy-cut-$(SERVICE):$(TAG)
+
 clean:
 	rm -rf ./release
 
 build:	guard-SERVICE
-	docker build --build-arg service=$(SERVICE) -t amstee/easy-cut-$(SERVICE)":"$(TAG) .
+	docker build	--build-arg service=$(SERVICE) \
+			-t amstee/easy-cut-$(SERVICE)":"$(TAG) .
 
